fix: adjusted margin-top for main as it was covered by the larger header and navbar. Also changed font-size for #logo, to avoid problems with very large screen resolutions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,14 +122,19 @@ footer {
     }
 
     #logo {
-        font-size: 5vw;
+        font-size: 300%;
         text-align: center;
         padding: 1rem 0;
+        line-height: 50px;
     }
 
     header {
         flex-direction: column;
         align-items: center;
+    }
+
+    main {
+        margin-top: 124px;
     }
 
 }
